[CDAPI-55]: Fixed schema tests
Also added logging to API Gateway Mock and improved error handling in lambda handler.
